<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="30dp"
        android:id="@+id/toolbar"
        android:background="@drawable/splashbg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_width="0dp"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/backRL"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="80dp"
            android:layout_height="80dp">
            <ImageView
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:id="@+id/imageView1"
                android:src="@drawable/back"

                android:layout_height="20dp"
                android:layout_width="20dp"
                app:tint="@color/colorWhiteBackground" />
        </RelativeLayout>

        <TextView
            android:layout_marginRight="20sp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#E6EFE7E9"


            android:shadowRadius="30"
            android:shadowColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/backRL"
            app:layout_constraintTop_toTopOf="@+id/backRL"
            app:layout_constraintLeft_toRightOf="@+id/backRL"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FFFFFFFF">

            <LinearLayout
                android:id="@+id/list_item2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:padding="15dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlackText"
                    android:text="@string/shareApp"
                    tools:text="@string/shareApp"
                    android:duplicateParentState="true"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:layout_marginTop="7dp"
                    android:textSize="15sp"
                    android:text="@string/shareAppText"
                    tools:text="@string/shareAppText"
                    android:duplicateParentState="true"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_item3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:padding="15dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlackText"
                    android:text="@string/rateApp"
                    tools:text="@string/rateApp"
                    android:duplicateParentState="true"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:layout_marginTop="7dp"
                    android:textSize="15sp"
                    android:text="@string/rateAppText"
                    tools:text="@string/rateAppText"
                    android:duplicateParentState="true"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_item7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:padding="15dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlackText"
                    android:text="@string/feedback"
                    tools:text="@string/feedback"
                    android:duplicateParentState="true"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/list_item6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:padding="15dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlackText"
                    android:text="@string/privacy"
                    tools:text="@string/privacy"
                    android:duplicateParentState="true"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/list_item5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:padding="15dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlackText"
                    android:text="@string/checkUpdate"
                    tools:text="@string/checkUpdate"
                    android:duplicateParentState="true"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/list_item4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:padding="15dp"
                android:orientation="vertical"
                android:clickable="false"
                android:focusable="true">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlackText"
                    android:text="@string/version"
                    tools:text="@string/version"
                    android:duplicateParentState="true"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:layout_marginTop="7dp"
                    android:textSize="15sp"
                    android:text="@string/versionCode"
                    tools:text="@string/versionCode"
                    android:duplicateParentState="true"/>

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>