<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_id"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_id"
        android:orientation="vertical"
        android:background="#FFFFFFFF">
        <LinearLayout
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:duplicateParentState="true"
                android:gravity="start|center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/selectFontsize"
                android:textAlignment="center"
                android:textColor="@color/colorBlackText"
                android:textSize="17sp"
                tools:text="@string/selectFontsize" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="15sp"
                android:text="@string/fontsize"
                tools:text="@string/fontsize"
                android:duplicateParentState="true"  />

        </LinearLayout>

        <!--<LinearLayout
            android:id="@+id/list_item2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingLeft="15dp"
                android:paddingTop="3dp"
                android:paddingRight="15dp"
                android:textSize="20sp"
                android:text="@string/shareApp"
                tools:text="@string/shareApp"
                android:duplicateParentState="true"/>

        </LinearLayout>-->
        <LinearLayout
            android:id="@+id/list_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:textSize="17sp"
                android:textColor="@color/colorBlackText"
                android:text="@string/shareApp"
                tools:text="@string/shareApp"
                android:duplicateParentState="true"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:layout_marginTop="7dp"
                android:textSize="15sp"
                android:text="@string/shareAppText"
                tools:text="@string/shareAppText"
                android:duplicateParentState="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:textSize="17sp"
                android:textColor="@color/colorBlackText"
                android:text="@string/rateApp"
                tools:text="@string/rateApp"
                android:duplicateParentState="true"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:layout_marginTop="7dp"
                android:textSize="15sp"
                android:text="@string/rateAppText"
                tools:text="@string/rateAppText"
                android:duplicateParentState="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_item7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:textSize="17sp"
                android:textColor="@color/colorBlackText"
                android:text="@string/feedback"
                tools:text="@string/feedback"
                android:duplicateParentState="true"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/list_item6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:textSize="17sp"
                android:textColor="@color/colorBlackText"
                android:text="@string/privacy"
                tools:text="@string/privacy"
                android:duplicateParentState="true"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/list_item5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:textSize="17sp"
                android:textColor="@color/colorBlackText"
                android:text="@string/checkUpdate"
                tools:text="@string/checkUpdate"
                android:duplicateParentState="true"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/list_item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="false"
            android:focusable="true">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:textSize="17sp"
                android:textColor="@color/colorBlackText"
                android:text="@string/version"
                tools:text="@string/version"
                android:duplicateParentState="true"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:layout_marginTop="7dp"
                android:textSize="15sp"
                android:text="@string/versionCode"
                tools:text="@string/versionCode"
                android:duplicateParentState="true"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>